--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,25 +1,23 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Jumbotron Template for Bootstrap</title>
-    <!-- <link href="/css/bootstrap.min.css" rel="stylesheet"> -->
-    <!-- https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/custom.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/custom.css">
+  </head>
 
-</head>
+  <body>
 
-<body>
     <% include ./partials/navbar %>
 
-    <div class="container">
 
-        <%- body -%>
+      <!-- Example row of columns -->
+      <%- body -%>
 
-    </div>
-
-    <% include ./partials/footer %>
-</body>
-
+      <!-- /container -->
+      <% include ./partials/footer %>
+      <% include ./partials/javascriptOnly %>
+  </body>
 </html>
