--- a/views/main/home.ejs
+++ b/views/main/home.ejs
@@ -1,22 +1,30 @@
-<% layout('boilerplate') -%>
-
-<h1>Shop Smart, Save big</h1>
-
-<p>Starting point to create something more unique</p>
+<% layout('layout') -%>
 
 
-<p>Signup to start Buying</p>
-<h3>Start your search here</h3>
 
+<!-- Main jumbotron for a primary marketing message or call to action -->
+<div class="jumbotron" id="navbar-gap">
+  <div class="container">
+    <h1> Shop Smart, Save Big!</h1>
+    <p>Starting point to create something more unique</p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Signup &raquo;</a></p>
+  </div>
+</div>
 
-<p>Our Prices are some of the best on the web</p>
+<div class="container">
+  <!-- Example row of columns -->
+  <div class="row">
+    <div class="col-md-4">
+      <h3>Start your search here</h3>
+      <p>Signup to start Buying</p>
+    </div>
+    <div class="col-md-4">
+      <h3>Look for Smart items?</h3>
+      <p>These will appear across the site as you add to your cart</p>
 
-
-<h3>Look for smart item</h3>
-<p>These will appear across the site as you add to your cart</p>
-
-
-<h3>Build a smart cart</h3>
-<p>The more smart items you buy together, the more you save :)</p>
-
-
+   </div>
+    <div class="col-md-4">
+      <h3>Build a smart cart</h3>
+      <p>The more smart items you buy together, the more you save :)</p>
+    </div>
+  </div>
