--- a/views/main/product.ejs
+++ b/views/main/product.ejs
@@ -13,12 +13,9 @@
 
 
     <div class="col-md-4">
-      <h3>
-        <%= product.name %>
-      </h3>
-      <h1>
-        <%= product.price %>
-      </h1>
+      <h3><%= product.name %></h3>
+      <h1><%= product.price %></h1>
+
       <form method="post">
         <div class="btn-group" role="group" aria-label="...">
           <input type="hidden" name="quantity" id="quantity" value="1"></input>
@@ -36,11 +33,12 @@
         </div>
 
         <% if (user)  { %>
-        <button type="submit" class="btn btn-primary btn-lg">Add to Cart</button>
+          <button type="submit" class="btn btn-primary btn-lg">Add to Cart</button>
         <% } else { %>
-        <a href='/signup' class="btn btn-warning btn-lg">Signup to begin buying!</a>
+          <a href='/signup' class="btn btn-warning btn-lg">Signup to begin buying!</a>
         <% } %>
       </form>
+
     </div>
   </div>
 </div>
