--- a/views/accounts/login.ejs
+++ b/views/accounts/login.ejs
@@ -25,7 +25,10 @@
       </div>
 
       <button type="submit" class="btn btn-success">Submit</button>
-
+      <div>&nbsp;</div>
+      <a class="btn btn-block btn-social btn-facebook" href="/auth/facebook">
+        <i class="fa fa-facebook"></i> Sign in with Facebook
+      </a>
     </form>
   </div>
 </div>
