--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,8 +3,12 @@
 <html lang="en">
   <head>
     <title>Ecommerce</title>
+    
     <!-- <link rel="stylesheet" href="/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css">
+
     <link rel="stylesheet" href="/css/custom.css">
   </head>
 
